--- a/Tarea11-Johann/.classpath
+++ b/Tarea11-Johann/.classpath
@@ -11,5 +11,10 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Usuario/git/Tarea11-AD/Tarea11-Johann/lib/json-simple-1.1.1 - copia.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
